<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Music App</string>

    <!-- Screen and button name for song currently playing [CHAR LIMIT=20] -->
    <string name="screen_now_playing">Now playing</string>

    <!-- Screen an button name for search functionality (artist, song or album) [CHAR LIMIT=20] -->
    <string name="screen_search">Search</string>

    <!-- Screen and button name for library (artists, songs, albums, playlists) [CHAR LIMIT=20] -->
    <string name="screen_library">Library</string>

    <!-- Screen and button name to display the artist details -->
    <string name="artist_details">Artist details</string>

    <!-- Screen and button name to display the album details -->
    <string name="album_details">Album details</string>

    <!-- Screen and button name to display songs in library -->
    <string name="library_songs">My songs</string>

    <!-- Screen and button name to display artists in library -->
    <string name="library_artists">My artists</string>

    <!-- Screen and button name to display albums in library -->
    <string name="library_albums">My albums</string>

    <!-- Screen and button name to display playlists in library -->
    <string name="library_playlists">My playlists</string>

    <!-- Description and purposes of MainActivity -->
    <string name="text_homepage">This is the homepage of our streaming app that allows to play music. On this screen,
        we will display a welcome message to the user and personalized data feeds horizontally scrollable: #Last played songs #Top playlists
        (shared by the users community ) #You may like (suggestion of songs based upon play history => Machine Learning, Netflix-like).
        From this screen, the user can access: #Now playing screen #Search screen #Library screen. We might use MediaPlayer
        or ExoPlayer libraries to stream audio files. We also need to implement a database that stores all user\'s history.</string>

    <!-- Description and purposes of NowPlayingActivity -->
    <string name="text_now_playing">This screen shows the song which is currently played. We will display the song details such as
        the title, the artist and the album it is part of, a media player bar that allows to navigate through the song as well as going
        back and forward through the album.</string>

    <!-- Description and purposes of SearchActivity -->
    <string name="text_search_activity">This screen will allow the user to run queries such as song title, artist, album, playlist title and
        play them or add them to the user\'s library. For this functionality we may use SEARCH intent and SearchView, though we have
        to keep in mind that we will need to use networking to search into the database.</string>

    <!-- Description and purposes of LibraryActivity -->
    <string name="text_library">This screen shows the library of the user i.e. all songs added which can be displayed by songs, artists,
        albums and playlists. Each of the previous lists will be generated by running the appropriate request.</string>

    <!-- Description and purposes of AlbumDetailsActivity -->
    <string name="text_album_details">This screen shows the album details i.e. album pic, release date, list of songs.</string>

    <!-- Description and purposes of ArtistDetailsActivity -->
    <string name="text_artist_details">This screen shows the artist details i.e. a pic, list of albums produced.</string>

    <!-- Description and purposes of MyAlbumsActivity -->
    <string name="text_my_albums">This screen shows all songs added by the user displayed by albums</string>

    <!-- Description and purposes of MyArtistsActivity -->
    <string name="text_my_artists">This screen shows all songs added by the user displayed by artists</string>

    <!-- Description and purposes of MyPlaylistsActivity -->
    <string name="text_my_playlists">This screen shows all songs added by the user displayed by playlist names. The user can either add
        existing playlists and create his own.</string>

    <!-- Description and purposes of MySongsActivity -->
    <string name="text_my_songs">This screen shows all songs added by the user displayed by titles</string>
</resources>