<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ParentLayout"
    android:orientation="vertical"
    tools:context="com.example.android.musicappstructure.LibraryActivity">

    <TextView
        style="@style/TextView"
        android:text="@string/text_library" />

    <Button
        android:id="@+id/library_songs"
        style="@style/Button"
        android:text="@string/library_songs" />

    <Button
        android:id="@+id/library_albums"
        style="@style/Button"
        android:text="@string/library_albums" />

    <Button
        android:id="@+id/library_artists"
        style="@style/Button"
        android:text="@string/library_artists" />

    <Button
        android:id="@+id/library_playlists"
        style="@style/Button"
        android:text="@string/library_playlists" />


</LinearLayout>
